Fix Desktop filter tag spacing issue

--- a/sass/_photo-gallery.scss
+++ b/sass/_photo-gallery.scss
@@ -5,7 +5,7 @@
 }
 
 .filter-menu{
-  padding-bottom: 10%;
+  padding-bottom: 2.5%;
 	span{
 		padding: 0 1%;
 	}
@@ -17,6 +17,10 @@
     &:focus{
       text-decoration: none;
     }
+  }
+
+  @include mobile {
+    padding-bottom: 10%;
   }
 }
 
